clean up notebook

--- a/05_duckdb.ipynb
+++ b/05_duckdb.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
        "└───────────────┴──────────────┴──────────────┴──────────────┴──────────────┴───────────┴──────────┘"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +136,7 @@
        "└──────────────────────────┴──────────────────┴───────────┴────────────┘"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +175,7 @@
        "└────────────────────┘"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -215,24 +215,24 @@
        "  white-space: pre-wrap;\n",
        "}\n",
        "</style>\n",
-       "<small>shape: (5, 4)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>start_station_name</th><th>start_station_id</th><th>start_lat</th><th>start_lng</th></tr><tr><td>str</td><td>f64</td><td>f64</td><td>f64</td></tr></thead><tbody><tr><td>&quot;Irving Ave &amp; DeKalb Ave&quot;</td><td>4898.02</td><td>40.7027</td><td>-73.92095</td></tr><tr><td>&quot;36 St &amp; 3 Ave&quot;</td><td>3460.02</td><td>40.655716</td><td>-74.006664</td></tr><tr><td>&quot;Flatbush Ave &amp; Ocean Ave&quot;</td><td>3704.04</td><td>40.663657</td><td>-73.963014</td></tr><tr><td>&quot;Christ Hospital&quot;</td><td>null</td><td>40.734786</td><td>-74.050444</td></tr><tr><td>&quot;Sheridan Ave &amp; E 172 St&quot;</td><td>8229.04</td><td>40.840494</td><td>-73.911479</td></tr></tbody></table></div>"
+       "<small>shape: (5, 4)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>start_station_name</th><th>start_station_id</th><th>start_lat</th><th>start_lng</th></tr><tr><td>str</td><td>f64</td><td>f64</td><td>f64</td></tr></thead><tbody><tr><td>&quot;Bainbridge Ave &amp; E 196 St&quot;</td><td>8615.01</td><td>40.86648</td><td>-73.89042</td></tr><tr><td>&quot;Crescent St &amp; 35 Ave&quot;</td><td>6688.01</td><td>40.759627</td><td>-73.932145</td></tr><tr><td>&quot;White St &amp; Johnson Ave&quot;</td><td>5099.03</td><td>40.707174</td><td>-73.93581</td></tr><tr><td>&quot;E 78 St &amp; 2 Ave&quot;</td><td>7057.07</td><td>40.772796</td><td>-73.955778</td></tr><tr><td>&quot;Hudson St &amp; Reade St&quot;</td><td>5359.1</td><td>40.71625</td><td>-74.009105</td></tr></tbody></table></div>"
       ],
       "text/plain": [
        "shape: (5, 4)\n",
-       "┌──────────────────────────┬──────────────────┬───────────┬────────────┐\n",
-       "│ start_station_name       ┆ start_station_id ┆ start_lat ┆ start_lng  │\n",
-       "│ ---                      ┆ ---              ┆ ---       ┆ ---        │\n",
-       "│ str                      ┆ f64              ┆ f64       ┆ f64        │\n",
-       "╞══════════════════════════╪══════════════════╪═══════════╪════════════╡\n",
-       "│ Irving Ave & DeKalb Ave  ┆ 4898.02          ┆ 40.7027   ┆ -73.92095  │\n",
-       "│ 36 St & 3 Ave            ┆ 3460.02          ┆ 40.655716 ┆ -74.006664 │\n",
-       "│ Flatbush Ave & Ocean Ave ┆ 3704.04          ┆ 40.663657 ┆ -73.963014 │\n",
-       "│ Christ Hospital          ┆ null             ┆ 40.734786 ┆ -74.050444 │\n",
-       "│ Sheridan Ave & E 172 St  ┆ 8229.04          ┆ 40.840494 ┆ -73.911479 │\n",
-       "└──────────────────────────┴──────────────────┴───────────┴────────────┘"
+       "┌───────────────────────────┬──────────────────┬───────────┬────────────┐\n",
+       "│ start_station_name        ┆ start_station_id ┆ start_lat ┆ start_lng  │\n",
+       "│ ---                       ┆ ---              ┆ ---       ┆ ---        │\n",
+       "│ str                       ┆ f64              ┆ f64       ┆ f64        │\n",
+       "╞═══════════════════════════╪══════════════════╪═══════════╪════════════╡\n",
+       "│ Bainbridge Ave & E 196 St ┆ 8615.01          ┆ 40.86648  ┆ -73.89042  │\n",
+       "│ Crescent St & 35 Ave      ┆ 6688.01          ┆ 40.759627 ┆ -73.932145 │\n",
+       "│ White St & Johnson Ave    ┆ 5099.03          ┆ 40.707174 ┆ -73.93581  │\n",
+       "│ E 78 St & 2 Ave           ┆ 7057.07          ┆ 40.772796 ┆ -73.955778 │\n",
+       "│ Hudson St & Reade St      ┆ 5359.1           ┆ 40.71625  ┆ -74.009105 │\n",
+       "└───────────────────────────┴──────────────────┴───────────┴────────────┘"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -282,12 +282,12 @@
      "output_type": "stream",
      "text": [
       "Stations Table (sample):\n",
-      "         start_station_name  start_station_id  start_lat  start_lng\n",
-      "0   Irving Ave & DeKalb Ave           4898.02  40.702700 -73.920950\n",
-      "1             36 St & 3 Ave           3460.02  40.655716 -74.006664\n",
-      "2  Flatbush Ave & Ocean Ave           3704.04  40.663657 -73.963014\n",
-      "3           Christ Hospital               NaN  40.734786 -74.050444\n",
-      "4   Sheridan Ave & E 172 St           8229.04  40.840494 -73.911479\n"
+      "          start_station_name  start_station_id  start_lat  start_lng\n",
+      "0  Bainbridge Ave & E 196 St           8615.01  40.866480 -73.890420\n",
+      "1       Crescent St & 35 Ave           6688.01  40.759627 -73.932145\n",
+      "2     White St & Johnson Ave           5099.03  40.707174 -73.935810\n",
+      "3            E 78 St & 2 Ave           7057.07  40.772796 -73.955778\n",
+      "4       Hudson St & Reade St           5359.10  40.716250 -74.009105\n"
      ]
     }
    ],
@@ -339,7 +339,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now to add the rides table, which is the largest. Using DuckDB's command line interface, we can efficiently add the table directly, as we were experiencing kernel crashes while attempting this step in python.\n",
+    "Now to add the rides table, which is the largest. Using DuckDB's command line interface, we can efficiently add the table directly. I was experiencing kernel crashes while attempting this step in Python. I ran the following commands in sequence:\n",
     "\n",
     "```bash\n",
     "duckdb citibike.db;\n",
@@ -357,112 +357,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Path to the DuckDB database and the Parquet file\n",
-    "db_path = \"citibike.db\"\n",
-    "parquet_path = \"../combined/group1_combined/group1_pl_ridenorm.parquet\"\n",
+    "# # Path to the DuckDB database and the Parquet file\n",
+    "# db_path = \"citibike.db\"\n",
+    "# parquet_path = \"../combined/group1_combined/group1_pl_ridenorm.parquet\"\n",
     "\n",
-    "with duckdb.connect(db_path) as con:\n",
-    "    con.execute(\"DROP TABLE IF EXISTS ride\")\n",
-    "    con.execute(\"CREATE TABLE ride AS SELECT * FROM read_parquet($1)\", [parquet_path])"
+    "# with duckdb.connect(db_path) as con:\n",
+    "#     con.execute(\"DROP TABLE IF EXISTS ride\")\n",
+    "#     con.execute(\"CREATE TABLE ride AS SELECT * FROM read_parquet($1)\", [parquet_path])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Inserted 500000 rows so far...\n",
-      "Inserted 1000000 rows so far...\n",
-      "Inserted 1500000 rows so far...\n",
-      "Inserted 2000000 rows so far...\n",
-      "Inserted 2500000 rows so far...\n",
-      "Inserted 3000000 rows so far...\n",
-      "Inserted 3500000 rows so far...\n",
-      "Inserted 4000000 rows so far...\n",
-      "Inserted 4500000 rows so far...\n",
-      "Inserted 5000000 rows so far...\n",
-      "Inserted 5500000 rows so far...\n",
-      "Inserted 6000000 rows so far...\n",
-      "Inserted 6500000 rows so far...\n",
-      "Inserted 7000000 rows so far...\n",
-      "Inserted 7500000 rows so far...\n",
-      "Inserted 8000000 rows so far...\n",
-      "Inserted 8500000 rows so far...\n",
-      "Inserted 9000000 rows so far...\n",
-      "Inserted 9500000 rows so far...\n",
-      "Inserted 10000000 rows so far...\n",
-      "Inserted 10500000 rows so far...\n",
-      "Inserted 11000000 rows so far...\n",
-      "Inserted 11500000 rows so far...\n",
-      "Inserted 12000000 rows so far...\n",
-      "Inserted 12500000 rows so far...\n",
-      "Inserted 13000000 rows so far...\n",
-      "Inserted 13500000 rows so far...\n",
-      "Inserted 14000000 rows so far...\n",
-      "Inserted 14500000 rows so far...\n",
-      "Inserted 15000000 rows so far...\n",
-      "Inserted 15500000 rows so far...\n",
-      "Inserted 16000000 rows so far...\n",
-      "Inserted 16500000 rows so far...\n",
-      "Inserted 17000000 rows so far...\n",
-      "Inserted 17500000 rows so far...\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "91b9fe37d79743128faf748ad15cb438",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "FloatProgress(value=0.0, layout=Layout(width='auto'), style=ProgressStyle(bar_color='black'))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Path to the DuckDB database and the Parquet file\n",
-    "db_path = \"citibike.db\"\n",
-    "parquet_path = \"../combined/group1_combined/group1_pl_ridenorm.parquet\"\n",
+    "# # Path to the DuckDB database and the Parquet file\n",
+    "# db_path = \"citibike.db\"\n",
+    "# parquet_path = \"../combined/group1_combined/group1_pl_ridenorm.parquet\"\n",
     "\n",
-    "# Connect to the DuckDB database\n",
-    "chunk_size = 500_000\n",
+    "# # Connect to the DuckDB database\n",
+    "# chunk_size = 500_000\n",
     "\n",
-    "with duckdb.connect(db_path) as con:\n",
-    "    # Drop and create the table\n",
-    "    con.execute(\"DROP TABLE IF EXISTS ride\")\n",
-    "    con.execute(f\"CREATE TABLE ride AS SELECT * FROM '{parquet_path}' LIMIT 0\")\n",
+    "# with duckdb.connect(db_path) as con:\n",
+    "#     # Drop and create the table\n",
+    "#     con.execute(\"DROP TABLE IF EXISTS ride\")\n",
+    "#     con.execute(f\"CREATE TABLE ride AS SELECT * FROM '{parquet_path}' LIMIT 0\")\n",
     "    \n",
-    "    # Process and insert chunks\n",
-    "    offset = 0\n",
-    "    while True:\n",
-    "        query = f\"\"\"\n",
-    "            INSERT INTO ride\n",
-    "            SELECT * FROM '{parquet_path}'\n",
-    "            LIMIT {chunk_size} OFFSET {offset}\n",
-    "        \"\"\"\n",
-    "        result = con.execute(query).fetchall()\n",
-    "        if not result:  # No more rows\n",
-    "            break\n",
-    "        offset += chunk_size\n",
-    "        if offset % 500000 == 0:\n",
-    "            with open(\"progress_log.txt\", \"a\") as log_file:\n",
-    "                log_file.write(f\"Inserted {offset} rows so far...\\n\")\n",
+    "#     # Process and insert chunks\n",
+    "#     offset = 0\n",
+    "#     while True:\n",
+    "#         query = f\"\"\"\n",
+    "#             INSERT INTO ride\n",
+    "#             SELECT * FROM '{parquet_path}'\n",
+    "#             LIMIT {chunk_size} OFFSET {offset}\n",
+    "#         \"\"\"\n",
+    "#         result = con.execute(query).fetchall()\n",
+    "#         if not result:  # No more rows\n",
+    "#             break\n",
+    "#         offset += chunk_size\n",
+    "#         if offset % 500000 == 0:\n",
+    "#             with open(\"progress_log.txt\", \"a\") as log_file:\n",
+    "#                 log_file.write(f\"Inserted {offset} rows so far...\\n\")\n",
     "\n",
-    "    # Final row count\n",
-    "    row_count = con.execute(\"SELECT COUNT(*) FROM ride\").fetchone()[0]\n",
-    "    print(f\"Total rows inserted: {row_count}\")"
+    "#     # Final row count\n",
+    "#     row_count = con.execute(\"SELECT COUNT(*) FROM ride\").fetchone()[0]\n",
+    "#     print(f\"Total rows inserted: {row_count}\")"
    ]
   },
   {
@@ -474,51 +418,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
-    "# Path to ride parquet file\n",
-    "ride_file = '../combined/group1_combined/group1_pl_ridenorm.parquet'\n",
+    "# # Path to ride parquet file\n",
+    "# ride_file = '../combined/group1_combined/group1_pl_ridenorm.parquet'\n",
     "\n",
-    "# Read the Parquet file into a Polars DataFrame\n",
-    "ride_df = pl.read_parquet(ride_file)\n",
+    "# # Read the Parquet file into a Polars DataFrame\n",
+    "# ride_df = pl.read_parquet(ride_file)\n",
     "\n",
-    "# Define chunk size\n",
-    "chunk_size = 1_000_000\n",
+    "# # Define chunk size\n",
+    "# chunk_size = 1_000_000\n",
     "\n",
-    "# Connect to DuckDB and insert data in chunks\n",
-    "with duckdb.connect('citibike.db') as con:\n",
-    "    # Drop and create the `ride` table\n",
-    "    con.execute(\"DROP TABLE IF EXISTS ride\")\n",
-    "    con.execute(\"\"\"\n",
-    "        CREATE TABLE ride (\n",
-    "            ride_id VARCHAR(255),\n",
-    "            started_at TIMESTAMP,\n",
-    "            ended_at TIMESTAMP,\n",
-    "            start_station_id DOUBLE,\n",
-    "            end_station_id DOUBLE,\n",
-    "            ridertype INT,\n",
-    "            biketype INT\n",
-    "        )\n",
-    "    \"\"\")\n",
+    "# # Connect to DuckDB and insert data in chunks\n",
+    "# with duckdb.connect('citibike.db') as con:\n",
+    "#     # Drop and create the `ride` table\n",
+    "#     con.execute(\"DROP TABLE IF EXISTS ride\")\n",
+    "#     con.execute(\"\"\"\n",
+    "#         CREATE TABLE ride (\n",
+    "#             ride_id VARCHAR(255),\n",
+    "#             started_at TIMESTAMP,\n",
+    "#             ended_at TIMESTAMP,\n",
+    "#             start_station_id DOUBLE,\n",
+    "#             end_station_id DOUBLE,\n",
+    "#             ridertype INT,\n",
+    "#             biketype INT\n",
+    "#         )\n",
+    "#     \"\"\")\n",
     "\n",
-    "    # Insert data in chunks\n",
-    "    for i in range(0, len(ride_df), chunk_size):\n",
-    "        chunk = ride_df[i : i + chunk_size].to_arrow()  # Convert Polars chunk to Arrow\n",
-    "        con.execute(\"INSERT INTO ride SELECT * FROM read_arrow_table(?)\", [chunk])\n",
+    "#     # Insert data in chunks\n",
+    "#     for i in range(0, len(ride_df), chunk_size):\n",
+    "#         chunk = ride_df[i : i + chunk_size].to_arrow()  # Convert Polars chunk to Arrow\n",
+    "#         con.execute(\"INSERT INTO ride SELECT * FROM read_arrow_table(?)\", [chunk])\n",
     "\n",
-    "    # Verify insertion\n",
-    "    print(\"Ride Table (sample):\")\n",
-    "    print(con.execute(\"SELECT * FROM ride LIMIT 5\").fetchdf())\n",
+    "#     # Verify insertion\n",
+    "#     print(\"Ride Table (sample):\")\n",
+    "#     print(con.execute(\"SELECT * FROM ride LIMIT 5\").fetchdf())\n",
     "\n",
-    "# Print the `rider` and `bike` tables for validation\n",
-    "with duckdb.connect('citibike.db') as con:\n",
-    "    print(\"Rider Table:\")\n",
-    "    print(con.execute(\"SELECT * FROM rider\").fetchall())\n",
-    "    print(\"Bike Table:\")\n",
-    "    print(con.execute(\"SELECT * FROM bike\").fetchall())"
+    "# # Print the `rider` and `bike` tables for validation\n",
+    "# with duckdb.connect('citibike.db') as con:\n",
+    "#     print(\"Rider Table:\")\n",
+    "#     print(con.execute(\"SELECT * FROM rider\").fetchall())\n",
+    "#     print(\"Bike Table:\")\n",
+    "#     print(con.execute(\"SELECT * FROM bike\").fetchall())"
    ]
   },
   {
@@ -668,6 +612,32 @@
     "# convert to geojson\n",
     "brooklyn_outline.to_file('../data/brooklyn_outline.geojson', driver='GeoJSON')\n",
     "brooklyn_outline.plot()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'latitude' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[9], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m m \u001b[38;5;241m=\u001b[39m leafmap\u001b[38;5;241m.\u001b[39mMap(center\u001b[38;5;241m=\u001b[39m[\u001b[43mlatitude\u001b[49m, longitude], zoom\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m11\u001b[39m)\n\u001b[1;32m      3\u001b[0m m\u001b[38;5;241m.\u001b[39madd_marker_cluster(station_gdf, x\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mstart_lng\u001b[39m\u001b[38;5;124m'\u001b[39m, y\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mstart_lat\u001b[39m\u001b[38;5;124m'\u001b[39m, \n\u001b[1;32m      4\u001b[0m                      layer_name\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mCitibike Stations\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      6\u001b[0m m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'latitude' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "m = leafmap.Map(center=[latitude, longitude], zoom=11)\n",
+    "\n",
+    "m.add_marker_cluster(station_gdf, x='start_lng', y='start_lat', \n",
+    "                     layer_name='Citibike Stations')\n",
+    "\n",
+    "m"
    ]
   },
   {
