view all stations in dataset using leafmap

--- a/05_duckdb.ipynb
+++ b/05_duckdb.ipynb
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +287,11 @@
       "1       Crescent St & 35 Ave           6688.01  40.759627 -73.932145\n",
       "2     White St & Johnson Ave           5099.03  40.707174 -73.935810\n",
       "3            E 78 St & 2 Ave           7057.07  40.772796 -73.955778\n",
-      "4       Hudson St & Reade St           5359.10  40.716250 -74.009105\n"
+      "4       Hudson St & Reade St           5359.10  40.716250 -74.009105\n",
+      "Rider Table:\n",
+      "[('member', 0), ('casual', 1)]\n",
+      "Bike Table:\n",
+      "[('classic', 0), ('electric', 1), ('unknown', 2)]\n"
      ]
     }
    ],
@@ -330,9 +334,16 @@
     "    \"\"\")\n",
     "    con.execute(\"INSERT INTO stations SELECT * FROM read_parquet('../combined/group1_combined/unique_stations.parquet')\")\n",
     "\n",
-    "    # Verify `stations` table content\n",
+    "    # Verify `stations`, `rider`, and `bike` table content\n",
     "    print(\"Stations Table (sample):\")\n",
-    "    print(con.execute(\"SELECT * FROM stations LIMIT 5\").fetchdf())"
+    "    print(con.execute(\"SELECT * FROM stations LIMIT 5\").fetchdf())\n",
+    "\n",
+    "    with duckdb.connect('citibike.db') as con:\n",
+    "        print(\"Rider Table:\")\n",
+    "        print(con.execute(\"select * from rider\").fetchall())\n",
+    "        \n",
+    "        print(\"Bike Table:\")\n",
+    "        print(con.execute(\"select * from bike\").fetchall())"
    ]
   },
   {
@@ -356,177 +367,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # Path to the DuckDB database and the Parquet file\n",
-    "# db_path = \"citibike.db\"\n",
-    "# parquet_path = \"../combined/group1_combined/group1_pl_ridenorm.parquet\"\n",
-    "\n",
-    "# with duckdb.connect(db_path) as con:\n",
-    "#     con.execute(\"DROP TABLE IF EXISTS ride\")\n",
-    "#     con.execute(\"CREATE TABLE ride AS SELECT * FROM read_parquet($1)\", [parquet_path])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # Path to the DuckDB database and the Parquet file\n",
-    "# db_path = \"citibike.db\"\n",
-    "# parquet_path = \"../combined/group1_combined/group1_pl_ridenorm.parquet\"\n",
-    "\n",
-    "# # Connect to the DuckDB database\n",
-    "# chunk_size = 500_000\n",
-    "\n",
-    "# with duckdb.connect(db_path) as con:\n",
-    "#     # Drop and create the table\n",
-    "#     con.execute(\"DROP TABLE IF EXISTS ride\")\n",
-    "#     con.execute(f\"CREATE TABLE ride AS SELECT * FROM '{parquet_path}' LIMIT 0\")\n",
-    "    \n",
-    "#     # Process and insert chunks\n",
-    "#     offset = 0\n",
-    "#     while True:\n",
-    "#         query = f\"\"\"\n",
-    "#             INSERT INTO ride\n",
-    "#             SELECT * FROM '{parquet_path}'\n",
-    "#             LIMIT {chunk_size} OFFSET {offset}\n",
-    "#         \"\"\"\n",
-    "#         result = con.execute(query).fetchall()\n",
-    "#         if not result:  # No more rows\n",
-    "#             break\n",
-    "#         offset += chunk_size\n",
-    "#         if offset % 500000 == 0:\n",
-    "#             with open(\"progress_log.txt\", \"a\") as log_file:\n",
-    "#                 log_file.write(f\"Inserted {offset} rows so far...\\n\")\n",
-    "\n",
-    "#     # Final row count\n",
-    "#     row_count = con.execute(\"SELECT COUNT(*) FROM ride\").fetchone()[0]\n",
-    "#     print(f\"Total rows inserted: {row_count}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "# # Path to ride parquet file\n",
-    "# ride_file = '../combined/group1_combined/group1_pl_ridenorm.parquet'\n",
-    "\n",
-    "# # Read the Parquet file into a Polars DataFrame\n",
-    "# ride_df = pl.read_parquet(ride_file)\n",
-    "\n",
-    "# # Define chunk size\n",
-    "# chunk_size = 1_000_000\n",
-    "\n",
-    "# # Connect to DuckDB and insert data in chunks\n",
-    "# with duckdb.connect('citibike.db') as con:\n",
-    "#     # Drop and create the `ride` table\n",
-    "#     con.execute(\"DROP TABLE IF EXISTS ride\")\n",
-    "#     con.execute(\"\"\"\n",
-    "#         CREATE TABLE ride (\n",
-    "#             ride_id VARCHAR(255),\n",
-    "#             started_at TIMESTAMP,\n",
-    "#             ended_at TIMESTAMP,\n",
-    "#             start_station_id DOUBLE,\n",
-    "#             end_station_id DOUBLE,\n",
-    "#             ridertype INT,\n",
-    "#             biketype INT\n",
-    "#         )\n",
-    "#     \"\"\")\n",
-    "\n",
-    "#     # Insert data in chunks\n",
-    "#     for i in range(0, len(ride_df), chunk_size):\n",
-    "#         chunk = ride_df[i : i + chunk_size].to_arrow()  # Convert Polars chunk to Arrow\n",
-    "#         con.execute(\"INSERT INTO ride SELECT * FROM read_arrow_table(?)\", [chunk])\n",
-    "\n",
-    "#     # Verify insertion\n",
-    "#     print(\"Ride Table (sample):\")\n",
-    "#     print(con.execute(\"SELECT * FROM ride LIMIT 5\").fetchdf())\n",
-    "\n",
-    "# # Print the `rider` and `bike` tables for validation\n",
-    "# with duckdb.connect('citibike.db') as con:\n",
-    "#     print(\"Rider Table:\")\n",
-    "#     print(con.execute(\"SELECT * FROM rider\").fetchall())\n",
-    "#     print(\"Bike Table:\")\n",
-    "#     print(con.execute(\"SELECT * FROM bike\").fetchall())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Rider Table:\n",
-      "[('member', 0), ('casual', 1)]\n",
-      "Bike Table:\n",
-      "[('classic', 0), ('electric', 1), ('unknown', 2)]\n"
-     ]
-    }
-   ],
-   "source": [
-    "# create tables\n",
-    "with duckdb.connect('citibike.db') as con:\n",
-    "    con.execute(\"drop table if exists rider\")\n",
-    "    con.execute(\"\"\"\n",
-    "        create table rider (\n",
-    "            type varchar(255),\n",
-    "            id int\n",
-    "        )\n",
-    "    \"\"\")\n",
-    "\n",
-    "    # add data to table\n",
-    "    con.execute('''insert into rider values ('member', 0), ('casual', 1)''')\n",
-    "\n",
-    "with duckdb.connect('citibike.db') as con:\n",
-    "    con.execute(\"drop table if exists bike\")\n",
-    "    con.execute(\"\"\"\n",
-    "        create table bike (\n",
-    "            type varchar(255),\n",
-    "            id int\n",
-    "        )\n",
-    "    \"\"\")\n",
-    "\n",
-    "    # add data to table\n",
-    "    con.execute(\n",
-    "        '''insert into bike values \n",
-    "        ('classic', 0), \n",
-    "        ('electric', 1), \n",
-    "        ('unknown', 2)''')\n",
-    "    \n",
-    "with duckdb.connect('citibike.db') as con:\n",
-    "    con.execute('drop table if exists ride')\n",
-    "    con.execute('''\n",
-    "            create table ride (\n",
-    "                )\n",
-    "                ''')\n",
-    "    \n",
-    "with duckdb.connect('citibike.db') as con:\n",
-    "    print(\"Rider Table:\")\n",
-    "    print(con.execute(\"select * from rider\").fetchall())\n",
-    "    \n",
-    "    print(\"Bike Table:\")\n",
-    "    print(con.execute(\"select * from bike\").fetchall())"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -542,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -566,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -580,7 +420,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c863b6d8aefe4cbd8ab7be0e3804a8ca",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Map(center=[40.663919770970146, -73.93835141651655], controls=(ZoomControl(options=['position', 'zoom_in_text'…"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "m = leafmap.Map(center=[latitude, longitude], zoom=11)\n",
+    "\n",
+    "m.add_marker_cluster(station_gdf, x='start_lng', y='start_lat', \n",
+    "                     layer_name='Citibike Stations')\n",
+    "\n",
+    "m"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Use PostGIS to get the intersection of the stations with the Brooklyn borough outline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -589,7 +466,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -612,32 +489,6 @@
     "# convert to geojson\n",
     "brooklyn_outline.to_file('../data/brooklyn_outline.geojson', driver='GeoJSON')\n",
     "brooklyn_outline.plot()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'latitude' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[9], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m m \u001b[38;5;241m=\u001b[39m leafmap\u001b[38;5;241m.\u001b[39mMap(center\u001b[38;5;241m=\u001b[39m[\u001b[43mlatitude\u001b[49m, longitude], zoom\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m11\u001b[39m)\n\u001b[1;32m      3\u001b[0m m\u001b[38;5;241m.\u001b[39madd_marker_cluster(station_gdf, x\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mstart_lng\u001b[39m\u001b[38;5;124m'\u001b[39m, y\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mstart_lat\u001b[39m\u001b[38;5;124m'\u001b[39m, \n\u001b[1;32m      4\u001b[0m                      layer_name\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mCitibike Stations\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      6\u001b[0m m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'latitude' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "m = leafmap.Map(center=[latitude, longitude], zoom=11)\n",
-    "\n",
-    "m.add_marker_cluster(station_gdf, x='start_lng', y='start_lat', \n",
-    "                     layer_name='Citibike Stations')\n",
-    "\n",
-    "m"
    ]
   },
   {
@@ -669,13 +520,6 @@
     "                     layer_name='Citibike Stations')\n",
     "\n",
     "m"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Use PostGIS to get the intersection of the stations with the Brooklyn borough outline"
    ]
   },
   {
